--- a/ra_exploer/templates/base_generic.html
+++ b/ra_exploer/templates/base_generic.html
@@ -16,14 +16,14 @@
         {% load static %}
         <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
     </head>
-    <body>
+    <body style="background-color: white;">
         <nav class="navbar navbar-dark bg-dark fixed-top">
             <a class="navbar-brand">
                 <span class="fas fa-tools"></span> TD Toolkits
             </a>
             <div class="mr-sm-2 notes">有問題請洽曾煒翔(550-23477)</div>
         </nav>
-        <div class="container-fluid" style="margin-top: 100px">
+        <div class="container-fluid" style="margin-top: 100px;">
             <div class="row">
                 <div class="col-sm-2">
                     {% block sidebar %}
@@ -32,7 +32,7 @@
                     </ul>
                     {% endblock %}
                 </div>
-                <div class="col-sm-10">{% block content %}{% endblock %}</div>
+                <div class="col-sm-10" >{% block content %}{% endblock %}</div>
             </div>
         </div>
     </body>
