--- a/ra_exploer/templates/base_generic.html
+++ b/ra_exploer/templates/base_generic.html
@@ -26,10 +26,8 @@
         <div class="container-fluid" style="margin-top: 100px;">
             <div class="row">
                 <div class="col-sm-2">
-                    {% block sidebar %}
-                    <ul class="sidebar-nav">
-                        <li><a href="{% url 'index' %}">RA Exploer</a></li>
-                    </ul>
+                    {% block sidebar %}        
+                    <a class="btn" href="{% url 'index' %}">RA Exploer</a></li>                    
                     {% endblock %}
                 </div>
                 <div class="col-sm-10" >{% block content %}{% endblock %}</div>
