try using pyCharm and fix style and typos

--- a/ra_exploer/templates/index.html
+++ b/ra_exploer/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "base_generic.html" %} {% block content %}
-<h1>RA Exploer</h1>
+<h1>RA Explorer</h1>
 <hr />
 <!-- <form method="post" action="{% url 'export_results_csv' %}">
     {% csrf_token %} {{ form.as_table }}
