--- a/ra_exploer/templates/base_generic.html
+++ b/ra_exploer/templates/base_generic.html
@@ -15,6 +15,8 @@
         <!-- Add additional CSS in static file -->
         {% load static %}
         <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
+        <!-- reference your installed Font Awesome Free package's files here -->
+        <script src="{% static 'fontawesomefree/js/all.min.js' %}"></script>
     </head>
     <body style="background-color: white;">
         <nav class="navbar navbar-dark bg-dark fixed-top">
@@ -27,7 +29,8 @@
             <div class="row">
                 <div class="col-sm-2">
                     {% block sidebar %}        
-                    <a class="btn" href="{% url 'index' %}">RA Exploer</a></li>                    
+                    <a class="btn" href="{% url 'index' %}">RA Explorer</a></li>
+                    <a class="btn" href="">TR2 Calculator</a>                    
                     {% endblock %}
                 </div>
                 <div class="col-sm-10" >{% block content %}{% endblock %}</div>
