--- a/ra_exploer/templates/base_generic.html
+++ b/ra_exploer/templates/base_generic.html
@@ -12,6 +12,7 @@
             integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
             crossorigin="anonymous"
         />
+        
         <!-- Add additional CSS in static file -->
         {% load static %}
         <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
@@ -29,8 +30,8 @@
             <div class="row">
                 <div class="col-sm-2">
                     {% block sidebar %}        
-                    <a class="btn" href="{% url 'index' %}">RA Explorer</a></li>
-                    <a class="btn" href="">TR2 Calculator</a>                    
+                    <a class="btn btn-link mt-1" href="{% url 'index' %}">RA Explorer</a></li>
+                    <a class="btn btn-link mt-1" href="">TR2 Calculator</a>                    
                     {% endblock %}
                 </div>
                 <div class="col-sm-10" >{% block content %}{% endblock %}</div>
