--- a/ra_exploer/templates/test.html
+++ b/ra_exploer/templates/test.html
@@ -1,7 +1,6 @@
 {% extends "base_generic.html" %} {% block content %}
 <h2>Test Page</h2>
-<div>
-    {{ plot_div|safe }}
-</div>
+<div>{{ plot_div|safe }}</div>
+<a class="btn btn-dark" href="{% url 'test-download' %}">Test download</a>
 
 {% endblock %}
