--- a/ra_exploer/templates/base_generic.html
+++ b/ra_exploer/templates/base_generic.html
@@ -6,36 +6,49 @@
         {% endblock %}
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link
-            rel="stylesheet"
-            href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-            integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
-            crossorigin="anonymous"
-        />
-        
+        <!-- boostraps -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         <!-- Add additional CSS in static file -->
         {% load static %}
         <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
         <!-- reference your installed Font Awesome Free package's files here -->
-        <script src="{% static 'fontawesomefree/js/all.min.js' %}"></script>
+        <script src="{% static 'fontawesomefree/js/all.min.js' %}" async></script>
+        <!-- icon -->
+        <link rel="shortcut icon" type="image/png" href="https://img.icons8.com/ios/50/000000/laboratory.png"/>/>
+        <!-- Multi choise list -->
+        <!-- Include the plugin's CSS and JS: -->
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script type="text/javascript" src="{% static 'js/bootstrap-multiselect.js' %}"></script>
+        <link rel="stylesheet" href="{% static 'css/bootstrap-multiselect.css' %}" type="text/css"/>
+
     </head>
     <body style="background-color: white;">
-        <nav class="navbar navbar-dark bg-dark fixed-top">
-            <a class="navbar-brand">
-                <span class="fas fa-tools"></span> TD Toolkits
+        <nav class="container-fluid navbar navbar-dark bg-dark fixed-top">
+            <a class="navbar-brand" href="">
+                <span class="fas fa-tools"></span> TD Toolkits 
+                {% block navbar %}{% endblock %}
             </a>
             <div class="mr-sm-2 notes">有問題請洽曾煒翔(550-23477)</div>
         </nav>
-        <div class="container-fluid" style="margin-top: 100px;">
+        <div class="container-fluid" style="margin-top: 50px;">
             <div class="row">
-                <div class="col-sm-2">
+                <div class="col-sm-2 text-secondary bg-light">
                     {% block sidebar %}        
-                    <a class="btn btn-link mt-1" href="{% url 'index' %}">RA Explorer</a></li>
-                    <a class="btn btn-link mt-1" href="">TR2 Calculator</a>                    
+                    <a class="btn mt-1" href="{% url 'index' %}">RA Explorer</a></li>
+                    <a class="btn mt-1" href="">TR2 Calculator</a>                    
                     {% endblock %}
                 </div>
                 <div class="col-sm-10" >{% block content %}{% endblock %}</div>
             </div>
         </div>
+        <footer class="container-fluid footer">
+            Icon power by <a href="https://icons8.com/icon/QPrQ486nwPpS/laboratory">Laboratory icon by Icons8</a>
+        </footer>
     </body>
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $(".multiselect").multiselect();
+        });
+    </script>
 </html>
