--- a/ra_exploer/templates/filteredResult.html
+++ b/ra_exploer/templates/filteredResult.html
@@ -1,6 +1,11 @@
-{% extends "base_generic.html" %} {% block content %}
-<h2>Filtered Result</h2>
+{% extends "base_generic.html" %} 
+{% block navbar %}
+. <a class="navbar-brand me-0" href="{% url 'index' %}">RA Explorer</a>
+. <strong>Filtered Results</strong>
+{% endblock %}
+{% block content %}
 <a class="btn btn-dark" href="{% url 'filtered-result-download'%}">raw download</a>
+<hr/>
 <div>
     {{ plot_adhesion|safe }}
 </div>
