--- a/templates/base_generic.html
+++ b/templates/base_generic.html
@@ -15,23 +15,20 @@
         <!-- reference your installed Font Awesome Free package's files here -->
         <script src="{% static 'fontawesomefree/js/all.min.js' %}" async></script>
         <!-- icon -->
-        <link rel="shortcut icon" type="image/png" href="https://img.icons8.com/ios/50/000000/laboratory.png"/>/>
-        <!-- Multi choise list -->
-        <!-- Include the plugin's CSS and JS: -->
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-        <script type="text/javascript" src="{% static 'js/bootstrap-multiselect.js' %}"></script>
-        <link rel="stylesheet" href="{% static 'css/bootstrap-multiselect.css' %}" type="text/css"/>
-
+        <link rel="shortcut icon" type="image/png" href="https://img.icons8.com/ios/50/000000/laboratory.png"/>
+        
     </head>
     <body style="background-color: white;">
         <nav class="container-fluid navbar navbar-dark bg-dark fixed-top">
-            <a class="navbar-brand" href="">
-                <span class="fas fa-tools"></span> TD Toolkits 
+            <div class="navbar-brand">
+                <a class="navbar-brand me-0" href="">
+                    <span class="fas fa-tools"></span> TD Toolkits
+                </a>
                 {% block navbar %}{% endblock %}
-            </a>
+            </div>
             <div class="mr-sm-2 notes">有問題請洽曾煒翔(550-23477)</div>
         </nav>
-        <div class="container-fluid" style="margin-top: 50px;">
+        <div class="container-fluid" style="margin-top: 100px;">
             <div class="row">
                 <div class="col-sm-2 text-secondary bg-light">
                     {% block sidebar %}        
@@ -42,13 +39,8 @@
                 <div class="col-sm-10" >{% block content %}{% endblock %}</div>
             </div>
         </div>
-        <footer class="container-fluid footer">
-            Icon power by <a href="https://icons8.com/icon/QPrQ486nwPpS/laboratory">Laboratory icon by Icons8</a>
+        <footer class="container-fluid footer small text-secondary">
+            Icon power by <a class="link-secondary" href="https://icons8.com/icon/QPrQ486nwPpS/laboratory">Laboratory icon by Icons8</a>
         </footer>
     </body>
-    <script type="text/javascript">
-        $(document).ready(function() {
-            $(".multiselect").multiselect();
-        });
-    </script>
 </html>
