add New RA Item: PCT, SealWVTR

--- a/ra_exploer/templates/filteredResult.html
+++ b/ra_exploer/templates/filteredResult.html
@@ -21,5 +21,11 @@
 <!-- <div>
     {{ plot_lto|safe }}
 </div> -->
+<div>
+    {{ plot_pct|safe }}
+</div>
+<div>
+    {{ plot_sealwvtr|safe }}
+</div>
 
 {% endblock %}
