rename some words

--- a/ra_exploer/templates/index.html
+++ b/ra_exploer/templates/index.html
@@ -71,7 +71,7 @@
     </thead>
     <tbody>
         <tr>
-            <th>Limit</th>
+            <th>Critirial</th>
             <td>> {{ valid_adhesion.value }}</td>
             <td>> {{ valid_LTS.value }}</td>
             <td>
