--- a/tr2calculator/templates/tr2_calculator_generic.html
+++ b/tr2calculator/templates/tr2_calculator_generic.html
@@ -1,7 +1,7 @@
 {% extends "base_generic.html" %}
 
 {% block navbar %}
-. <strong>TR2 OPT Calculator<strong>
+. TR2 OPT Calculator
 {% endblock navbar%}
 
 {% block content %}
