--- a/ra_exploer/templates/index.html
+++ b/ra_exploer/templates/index.html
@@ -23,9 +23,15 @@
             <tr>
                 <td>
                     <select class="form-select" multiple="multiple" name="LC">
-                        {% comment %} <option selected>N.A.</option> {% endcomment %}
+                        {% if not opt_lc_list  %}
+                        <option selected>ALL</option>
+                        {% endif %}
                         {% for LC in LCs %}
-                        <option>{{ LC }}</option>
+                        <option
+                        {% if opt_lc_list  %}
+                            selected
+                        {% endif %}
+                        >{{ LC }}</option>
                         {% endfor %}
                     </select>
                 </td>
@@ -56,7 +62,8 @@
 </form>
 <br />
 <h4>Valid Value</h4>
-<table class="table text-center table-responsive small">
+<div class="table-responsive">
+<table class="table text-center small table-hover">
     <thead>
         <tr>
             <th></th>
@@ -143,54 +150,8 @@
         </tr>
     </tbody>
 </table>
+</div>
 <hr />
-<h4>Upload Data</h4>
-{% if file_form.errors %}
-<p style="color: red">
-    Please correct the error{{ file_form.errors|pluralize }} below.
-</p>
-{% endif %}
-<form action="{% url 'import_adhesion' %}" enctype="multipart/form-data" method="post">
-    {% csrf_token %}
-    <label>Adhesion</label>
-    {{ file_form.as_table }}
-    <input type="submit" value="submit" />
-</form>
+<a href="{% url 'ra-batch-upload' %}" class='btn btn-dark'>Batch Upload</a>
 
-<form action="{% url 'import_lto' %}" enctype="multipart/form-data" method="post">
-    {% csrf_token %}
-    <label>LTO</label>
-    {{ file_form.as_table }}
-    <input type="submit" value="submit" />
-</form>
-<form action="{% url 'import_lts' %}" enctype="multipart/form-data" method="post">
-    {% csrf_token %}
-    <label>LTS</label>
-    {{ file_form.as_table }}
-    <input type="submit" value="submit" />
-</form>
-<form action="{% url 'import_deltaAngle' %}" enctype="multipart/form-data" method="post">
-    {% csrf_token %}
-    <label>Δangle</label>
-    {{ file_form.as_table }}
-    <input type="submit" value="submit" />
-</form>
-<form action="{% url 'import_vhr' %}" enctype="multipart/form-data" method="post">
-    {% csrf_token %}
-    <label>VHR</label>
-    {{ file_form.as_table }}
-    <input type="submit" value="submit" />
-</form>
-<form action="{% url 'import_pct' %}" enctype="multipart/form-data" method="post">
-    {% csrf_token %}
-    <label>PCT</label>
-    {{ file_form.as_table }}
-    <input type="submit" value="submit" />
-</form>
-<form action="{% url 'import_sealwvtr' %}" enctype="multipart/form-data" method="post">
-    {% csrf_token %}
-    <label>Seal WVTR</label>
-    {{ file_form.as_table }}
-    <input type="submit" value="submit" />
-</form>
 {% endblock %}
