Correct the words

--- a/ra_exploer/templates/index.html
+++ b/ra_exploer/templates/index.html
@@ -61,7 +61,7 @@
     </table>
 </form>
 <br />
-<h4>Valid Value</h4>
+<h4>Criteria Table</h4>
 <div class="table-responsive">
 <table class="table text-center small table-hover">
     <thead>
@@ -78,7 +78,7 @@
     </thead>
     <tbody>
         <tr>
-            <th>Critirial</th>
+            <th>Criteria</th>
             <td>> {{ valid_adhesion.value }}</td>
             <td>> {{ valid_LTS.value }}</td>
             <td>
