--- a/tr2calculator/templates/tr2_calculator_query.html
+++ b/tr2calculator/templates/tr2_calculator_query.html
@@ -15,6 +15,26 @@
     <button class='btn btn-dark' type="submit">search</button>
 </form>
 <hr>
+<h4>Criteria Table(TODO)</h4>
+<table class="table text-center small table-hover">
+    <thead>
+        <th>Item</th>
+        <td> Cell Gap (um)</td>
+        <td> LC% </td>
+        <td> ΔEab* </td>
+        <td> RT(ms) </td>
+        <td> CR </td>
+    </thead>
+    <tbody>
+        <tr>
+            <th>Criteria</th>
+        </tr>
+        <tr>
+            <th>Venders</th>
+        </tr>
+    </tbody>
+</table>
+<hr>
 {% if q %}
     <p> LC Score Estimate:</p>
     <div>
