--- a/ra_exploer/templates/batchUpload.html
+++ b/ra_exploer/templates/batchUpload.html
@@ -52,4 +52,10 @@
     {{ file_form.as_table }}
     <input type="submit" value="submit" />
 </form>
+<form action="{% url 'import_ushape_ac' %}" enctype="multipart/form-data" method="post">
+    {% csrf_token %}
+    <label>U-Shape AC%</label>
+    {{ file_form.as_table }}
+    <input type="submit" value="submit" />
+</form>
 {% endblock content%}
